# Project_course_in_automation_AT22IS06-3002

./: README.md
example_server/: CMakeLists.txt  README.md  nicla_sense.c  nicla_sense.h  nicla_sense.uap  server_nodeset_loader.c
example_server/model/: nicla_sense.csv  nicla_sense.xml
model/: nicla_sense.tt2pro  nicla_sense.ua  test_model.tt2pro
opcua_server/: CMakeLists.txt  nicla_sense.c  nicla_sense.h  server_nodeset_loader.c
opcua_server/model/: nicla_sense.tt2pro  nicla_sense.ua  nicla_sense.xml
read_all_sensors/: read_all_sensors.ino
read_all_sensors_arduino/: read_all_sensors_arduino.ino
read_all_sensors_pc/: CMakeLists.txt  read_sensors.c
